# emotiv_node

./: .gitignore  CMakeLists.txt  package.xml
include/: die.h  request.h  serv.h
launch/: emotiv.launch
lib/: libboost_regex.so.1.42.0  libusb-1.0.so.0
msg/: Data.msg  Expressiv.msg
scripts/: emotiv_publisher.py  emotiv_wristctrl.py
src/: Emotiv.cpp  Emotiv.h  data.h  die.cpp  main.cpp  request.cpp  serv.cpp
